# DNN-Depth-Prediction

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/depth/: AbstractMap.h  OctoMap.h  depth_predictor.h  depth_predictor_node.h
include/lie_groups/: se2.hpp  se3.hpp  so2.hpp  so3.hpp
include/parameterizations/: lie_parameterization.hpp
include/spline/: sonxrn_spline.hpp
include/spline/fitting/: fit_rn_spline_residual.hpp  fit_rn_spline_to_samples.hpp
include/utils/: multivariate_gaussian.hpp
include/vision/: feature_manager.h  feature_tracker.h  feature_tracker_node.h  gyro_integrator.h  triangle_tracker.h
launch/: airsim_depth.launch  airsim_recording_tracker.launch  tracker.launch
msg/: FeatAndDepth.msg  FeatAndDisplacement.msg  FeatData.msg  SaveMap.srv  TrackedFeats.msg  TrackedFeatsWDis.msg
params/: airsim_recording.yaml  realsense_d435i.yaml  tracker.yaml
scripts/: airsim_data_capture_node.py  airsim_recoding_reader_node.py  area_tracker_node.py  bin_for_heatmap.py  camera_imu_processing.py  displacement_tracker_node.py  get_depth_of_one_frame.py  kd_tree.py  kd_tree_class.py  parse_airsim_recording.py  parse_airsim_recording_for_feat_testing.py  plot_example_depth.py  predict_depth.py  predict_depth_rotation.py  slice_training_data.py  test_kd_tree.py  train_neural_net.py  train_neural_net_all_data.py  train_neural_net_all_naive_data.py  train_neural_net_all_naive_data_relu.py
scripts/training_naive/: fingerprint.pb  keras_metadata.pb  saved_model.pb
scripts/training_naive/variables/: variables.data-00000-of-00001  variables.index
src/depth/: OctoMap.cpp  depth_predictor.cpp  depth_predictor_node.cpp
src/test/lie_groups/: jac_test.cpp
src/vision/: feature_tracker.cpp  feature_tracker_node.cpp  gyro_integrator.cpp  triangle_tracker.cpp
